--- a/.github/workflows/migrate_releases.yml
+++ b/.github/workflows/migrate_releases.yml
@@ -16,7 +16,7 @@ jobs:
           sudo apt install -y gh
 
       - name: Authenticate GitHub CLI
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+        run: echo "${{ secrets.RELEASE_TOKEN }}" | gh auth login --with-token
 
       - name: Fetch and Migrate Releases
         run: |
