--- a/.github/workflows/migrate_releases.yml
+++ b/.github/workflows/migrate_releases.yml
@@ -10,6 +10,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Debug Secrets
+        run: |
+          if [[ -z "${{ secrets.RELEASE_TOKEN }}" ]]; then
+            echo "❌ RELEASE_TOKEN is missing!"
+            exit 1
+          else
+            echo "✅ RELEASE_TOKEN is set."
+          fi
+
       - name: Install GitHub CLI
         run: |
           sudo apt update
@@ -18,8 +27,13 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo "${{ secrets.RELEASE_TOKEN }}" | gh auth login --with-token
 
+      - name: Check GitHub API Rate Limits
+        run: gh api rate_limit
+
       - name: Fetch and Migrate Releases
         run: |
+          set -e  # Stop on error
+
           SOURCE_REPO="Ryubing/Canary-Releases"
           DEST_REPO="ADEMOLA200/RyuNX"
 
@@ -34,15 +48,15 @@ jobs:
               # Create the release in the destination repo
               gh release create "$TAG" -R "$DEST_REPO" --title "$TAG" --notes "Migrated from $SOURCE_REPO"
 
-              # Directly transfer each asset from GitHub to GitHub
+              # Download and upload each asset
               for URL in $ASSET_URLS; do
                   FILENAME=$(basename "$URL")
-                  echo "Uploading $FILENAME to $DEST_REPO"
+                  echo "Downloading $FILENAME..."
+                  curl -L -o "$FILENAME" "$URL"
 
-                  # Stream the file from GitHub and upload
-                  gh release upload "$TAG" -R "$DEST_REPO" "$URL"
+                  echo "Uploading $FILENAME to $DEST_REPO"
+                  gh release upload "$TAG" -R "$DEST_REPO" "$FILENAME"
               done
 
-              echo "Release $TAG migrated successfully!"
+              echo "✅ Release $TAG migrated successfully!"
           done
-
