--- a/.github/workflows/migrate_releases.yml
+++ b/.github/workflows/migrate_releases.yml
@@ -33,12 +33,9 @@ jobs:
       - name: Fetch and Migrate Releases
         run: |
           set -e
-
           SOURCE_REPO="Ryubing/Canary-Releases"
           DEST_REPO="ADEMOLA200/RyuNX"
-
-          RELEASES=$(gh release list -R "$SOURCE_REPO" --json tagName -q '.[].tagName')
-
+          RELEASES=$(gh release list -R "$SOURCE_REPO" --limit 1000 --json tagName -q '.[].tagName')
           for TAG in $RELEASES; do
               echo "Processing release: $TAG"
               if gh release view "$TAG" -R "$DEST_REPO" > /dev/null 2>&1; then
