--- a/.github/workflows/migrate_releases.yml
+++ b/.github/workflows/migrate_releases.yml
@@ -53,9 +53,7 @@ jobs:
               | Windows ARM 64-bit | Canary Windows ARM Artifact  |
               | Linux 64-bit       | Canary Linux Artifact        |
               | Linux ARM 64-bit   | Canary Linux Artifact        |
-              | macOS              | Canary macOS Artifact        |
-
-              Migrated from $SOURCE_REPO"
+              | macOS              | Canary macOS Artifact        |"
               DESCRIPTION_CLEANED=$(echo "$DESCRIPTION" | sed 's/^              //g')
               gh release create "$TAG" -R "$DEST_REPO" --title "$TAG" --notes "$DESCRIPTION_CLEANED"
               for URL in $ASSET_URLS; do
