--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -157,7 +157,7 @@ jobs:
               continue
             if (
               source["type"] == "git"
-              and source["url"] == "https://github.com/ADEMOLA200/RyuNX.git"
+              and source["url"] == "https://github.com/ADEMOLA200/Ryujinx.git"
             ):
               source["commit"] = os.environ['RYUJINX_GIT_HASH']
 
