--- a/.gitignore
+++ b/.gitignore
@@ -174,7 +174,4 @@ PublishProfiles/
 # Glade backup files
 *.glade~
 Instructions.txt
-fetch_releases.sh
-fetch_releases.sh.save
-stream_releases.sh
-sync_releases.sh
+run-installation.txt
