--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,4 @@ PublishProfiles/
 *.glade~
 Installations & Commands
 .github/workflows/migrate_releases_with_deletion_of_previous_tags.yml
+instructions.txt
