--- a/.github/workflows/pr_triage.yml
+++ b/.github/workflows/pr_triage.yml
@@ -1,6 +1,6 @@
 name: "Pull Request Triage"
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, ready_for_review]
 
 jobs:
@@ -8,18 +8,14 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-
     runs-on: ubuntu-latest
-
     steps:
-      # Grab sources to get latest labeler.yml
       - name: Fetch sources
         uses: actions/checkout@v4
         with:
-           # Ensure we pin the source origin as pull_request_target run under forks.
-           fetch-depth: 0
-           repository: ADEMOLA200/Ryujinx
-           ref: develop
+          fetch-depth: 0
+          repository: ADEMOLA200/Ryujinx
+          ref: develop
 
       - name: Update labels based on changes
         uses: actions/labeler@v5
